<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5DCE2"
    tools:context=".Registration">

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:textColor="@color/black"
        android:hint="@string/first_name_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_second_name" />

    <Button
        android:id="@+id/previus_on_login"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="onClickBack"

        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:text="@string/to_come_in1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/registration"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/registration_second_name"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/second_name_hint"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/registration_Phone"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:textColorHint="@color/black"
        android:ems="10"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_name" />

    <EditText
        android:id="@+id/registration_Email"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_twotone_email_24"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_Phone" />


    <EditText
        android:id="@+id/registration_password"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/hint_password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registration_Email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registration_Email"
        app:layout_constraintTop_toBottomOf="@+id/registration_Email" />

    <Button
        android:id="@+id/registration"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_to_come_in"
        android:drawableRight="@drawable/ic_baseline_arrow_circle_right_24"
        android:onClick="onClickSingUp"
        android:text="@string/registration_button"
        app:layout_constraintEnd_toEndOf="@+id/registration_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registration_password"
        app:layout_constraintTop_toBottomOf="@+id/registration_password" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Else"
        app:layout_constraintEnd_toEndOf="@+id/registration"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/registration"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

    <Button
        android:id="@+id/google_to_com_in"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_to_come_in"
        android:drawableLeft="@drawable/google_icon"
        android:text="@string/to_come_in_Google"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/facebook_to_com_in"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_to_come_in"
        android:drawableLeft="@drawable/facebook_icon"
        android:text="@string/to_come_in_Facebook"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/google_to_com_in"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="@+id/google_to_com_in"
        app:layout_constraintTop_toBottomOf="@+id/google_to_com_in" />

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_to_com_in">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="45dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/have_account" />

        <Button
            android:id="@+id/to_come_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/to_come_in"
            android:textColor="#455BD6"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>