<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5DCE2"
    tools:context=".activity_login">

    <TextView

        android:id="@+id/textView6"
        android:layout_width="299dp"
        android:layout_height="91dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/dm_serif_display__regular"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/swap_me"
        android:textAppearance="@style/swap_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="311dp"
        android:layout_height="267dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="55dp"
            android:textColor="@color/black"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/entrance"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/to_come_in_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:textColorHint="@color/black"
            android:drawableStart="@drawable/ic_twotone_email_24"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/to_come_in_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_come_in_EmailAddress" />

        <Switch
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            android:text="@string/remember_me"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_come_in_password"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="#040303"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/remember_me"
            app:layout_constraintTop_toBottomOf="@+id/to_come_in_password"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/to_come_in"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_to_come_in"

        android:drawableRight="@drawable/ic_baseline_arrow_circle_right_24"
        android:onClick="onClickSingIn"
        android:text="@string/to_come_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Else"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_come_in" />

    <Button
        android:id="@+id/google_registration"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_to_come_in"
        android:drawableLeft="@drawable/google_icon"
        android:text="@string/to_come_in_Google"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/facebook_registration"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_to_come_in"
        android:drawableLeft="@drawable/facebook_icon"
        android:text="@string/to_come_in_Facebook"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_registration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_registration">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="102dp"
            android:layout_height="29dp"
            android:layout_marginBottom="28dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/not_ready" />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="139dp"
            android:layout_height="37dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:onClick="onClickRegistrationButton"
            android:text="@string/registration"
            android:textColor="#455BD6"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteY="654dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>